--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mysql": "^2.17.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sequelize-heroku": "^2.1.4"
   }
 }
