--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-handlebars": "^3.1.0",
     "mysql": "^2.17.1",
     "path": "^0.12.7",
+    "sequelize": "^5.19.6",
     "sequelize-heroku": "^2.1.4"
   }
 }
