--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mysql": "^2.17.1",
-    "path": "^0.12.7",
-    "sequelize": "^5.19.6",
-    "sequelize-heroku": "^2.1.4"
+    "path": "^0.12.7"
   }
 }
