--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/btgoligowski24/burger#readme",
   "dependencies": {
-    "dotenv": "^8.1.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
-    "mysql": "^2.17.1",
+    "handlebars": "^4.7.6",
+    "minimist": "^1.2.5",
+    "mysql": "^2.18.1",
     "path": "^0.12.7"
   }
 }
